[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roblox-event-generator"
version = "0.1.0"
description = "Automatically generates type definitions for Roblox EventManager"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "SirBepy", email = "sirbepy@github.com"}
]
keywords = ["roblox", "luau", "types", "codegen", "eventmanager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
roblox-event-generator = "roblox_event_generator.cli:main"

[project.urls]
Homepage = "https://github.com/SirBepy/roblox-event-generator"
Repository = "https://github.com/SirBepy/roblox-event-generator"
Issues = "https://github.com/SirBepy/roblox-event-generator/issues"
